# CubeMX_CMake

./: .mxproject  CMakeLists.txt  CubeMX_CMake.ioc
Core/Inc/: main.h  stm32f10x.h  stm32f10x_conf.h
Core/Src/: main.c
cmake/stm32cubemx/: CMakeLists.txt
